[gd_scene load_steps=7 format=3 uid="uid://d0be3jcb7jdj"]

[ext_resource type="Script" uid="uid://cvmt6bi4matx0" path="res://scenes/Enemies/enemy_template.gd" id="1_w6d11"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ny30o"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_utaol"]
albedo_color = Color(1, 0.176471, 0.0980392, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rajkg"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_w6d11"]
radius = 8.9

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w6d11"]
radius = 0.6

[node name="EnemyTemplate" type="CharacterBody3D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_w6d11")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ny30o")
surface_material_override/0 = SubResource("StandardMaterial3D_utaol")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rajkg")

[node name="Vision" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Vision"]
shape = SubResource("CylinderShape3D_w6d11")

[node name="DamageArea" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
shape = SubResource("CapsuleShape3D_w6d11")

[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
